--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
         
     <!-- CSS -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
@@ -65,7 +65,7 @@
                         <div class="swiper mySwiper">
                                 <div class="swiper-wrapper">
                                         <div class="swiper-slide">
-                                                <img src="images/homeImg1.jpg" alt="" class="home-img">
+                                                <img src="homeImg1.jpg" alt="" class="home-img">
 
                                                 <div class="home-details">
                                                         <div class="home-text">
@@ -78,7 +78,7 @@
                                         </div>
 
                                         <div class="swiper-slide">
-                                                <img src="images/homeImg2.jpg" alt="" class="home-img">
+                                                <img src="homeImg2.jpg" alt="" class="home-img">
 
                                                 <div class="home-details">
                                                         <div class="home-text">
@@ -91,7 +91,7 @@
                                         </div>
 
                                         <div class="swiper-slide">
-                                                <img src="images/homeImg3.jpg" alt="" class="home-img">
+                                                <img src="homeImg3.jpg" alt="" class="home-img">
 
                                                 <div class="home-details">
                                                         <div class="home-text">
@@ -169,7 +169,7 @@
                     <div class="menu-content">
                             <div class="menu-items">
                                     <div class="menu-item flex">
-                                            <img src="images/m4.png" alt="" class="menu-img">
+                                            <img src="m4.png" alt="" class="menu-img">
 
                                             <div class="menuItem-details">
                                                     <h4 class="menuItem-topic">Americano Coffee</h4>
@@ -182,7 +182,7 @@
                                             </div>
                                     </div>
                                     <div class="menu-item flex">
-                                            <img src="images/m1.png" alt="" class="menu-img">
+                                            <img src="m1.png" alt="" class="menu-img">
 
                                             <div class="menuItem-details">
                                                     <h4 class="menuItem-topic">Americano Roasted Coffee</h4>
@@ -195,7 +195,7 @@
                                             </div>
                                     </div>
                                     <div class="menu-item flex">
-                                            <img src="images/m2.png" alt="" class="menu-img">
+                                            <img src="m2.png" alt="" class="menu-img">
 
                                             <div class="menuItem-details">
                                                     <h4 class="menuItem-topic"> Latte Coffee</h4>
@@ -208,7 +208,7 @@
                                             </div>
                                     </div>
                                     <div class="menu-item flex">
-                                            <img src="images/m3.png" alt="" class="menu-img">
+                                            <img src="m3.png" alt="" class="menu-img">
 
                                             <div class="menuItem-details">
                                                     <h4 class="menuItem-topic">Espresso Coffee</h4>
@@ -268,19 +268,19 @@
 
                     <div class="brand-images">
                             <div class="brand-image">
-                                    <img src="images/brandImg1.png" alt="" class="brand-img">
+                                    <img src="brandImg1.png" alt="" class="brand-img">
                             </div>
                             <div class="brand-image">
-                                    <img src="images/brandImg2.png" alt="" class="brand-img">
+                                    <img src="brandImg2.png" alt="" class="brand-img">
                             </div>
                             <div class="brand-image">
-                                    <img src="images/brandImg3.png" alt="" class="brand-img">
+                                    <img src="brandImg3.png" alt="" class="brand-img">
                             </div>
                             <div class="brand-image">
-                                    <img src="images/brandImg4.png" alt="" class="brand-img">
+                                    <img src="brandImg4.png" alt="" class="brand-img">
                             </div>
                             <div class="brand-image">
-                                    <img src="images/brandImg5.png" alt="" class="brand-img">
+                                    <img src="brandImg5.png" alt="" class="brand-img">
                             </div>
                     </div>
             </div>
@@ -425,12 +425,12 @@
 </main>
 
 <!-- Swiper JS -->
-<script src="js/swiper-bundle.min.js"></script>
+<script src="swiper-bundle.min.js"></script>
 
 <!-- Scroll Reveal -->
-<script src="js/scrollreveal.js"></script>
+<script src="scrollreveal.js"></script>
 
 <!-- JavaScript -->
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
