--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coffee Website template | @albinxshiby</title>
-  <link rel="icon" type="image/png" href="images/favicon.png">
+  <link rel="icon" type="png" href="favicon.png">
     <!-- Swiper JS CSS-->
-    <link rel="stylesheet" href="css/swiper-bundle.min.css">
+    <link rel="stylesheet" href="swiper-bundle.min.css">
 
     <!-- Scroll Reveal -->
-    <link rel="stylesheet" href="css/scrollreveal.min.js">
+    <link rel="stylesheet" href="scrollreveal.min.js">
 
     <!-- Boxicons -->
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
